--- a/study_of_numpy.ipynb
+++ b/study_of_numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "36792fcb",
    "metadata": {},
    "outputs": [],
@@ -641,14 +641,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "7e1aebfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.07630829, 0.77991879, 0.43840923, 0.72346518, 0.97798951],\n",
+       "       [0.53849587, 0.50112046, 0.07205113, 0.26843898, 0.4998825 ],\n",
+       "       [0.67923   , 0.80373904, 0.38094113, 0.06593635, 0.2881456 ]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pseudo-random numbers\n",
-    "# np.random.seed()\n",
-    "random_array_4 = np.random.randint"
+    "np.random.seed(7)\n",
+    "random_array_4 = np.random.random((3, 5))\n",
+    "random_array_4\n",
+    "# random.seed(int) function keeps the random numbers same."
    ]
   },
   {
