--- a/study_of_numpy.ipynb
+++ b/study_of_numpy.ipynb
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f460b9ce",
+   "id": "fdd4ac3d",
    "metadata": {},
    "source": [
     "# Viewing arrays and matrices"
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "da761003",
+   "id": "7ec68fd8",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "04f5d1bb",
+   "id": "daf600c0",
    "metadata": {},
    "outputs": [
     {
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4afd136b",
+   "id": "cdd7c68a",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "4abb1e1b",
+   "id": "4a598eee",
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "20d7cc15",
+   "id": "6ab785d3",
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "cd645597",
+   "id": "e736fa03",
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9ac81349",
+   "id": "dc0625d7",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "a92e4b07",
+   "id": "ea77b069",
    "metadata": {},
    "outputs": [
     {
@@ -868,7 +868,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "54129311",
+   "id": "a2eb965e",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "0fc87f67",
+   "id": "3ed4c7e8",
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "c65f85a6",
+   "id": "afb0cf02",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f641cc8",
+   "id": "6d25b22d",
    "metadata": {},
    "source": [
     "# Arithmetic Operations"
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "dfe25a54",
+   "id": "f6d86b80",
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "8d3205c2",
+   "id": "85bfa060",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "c1da113c",
+   "id": "9afb411e",
    "metadata": {},
    "outputs": [
     {
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "fdc694b0",
+   "id": "d9ec89f4",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "ef75e2d3",
+   "id": "164077ee",
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40fd8bb4",
+   "id": "b3f1c8de",
    "metadata": {},
    "source": [
     "# Let's try with different shape of matrices"
@@ -1090,7 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "c0ef5b2f",
+   "id": "9649c1b9",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "e0a0bbad",
+   "id": "0cbfcef2",
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "565dee7f",
+   "id": "db757dee",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88fccce2",
+   "id": "185425f4",
    "metadata": {},
    "source": [
     "# :("
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31d5affd",
+   "id": "7e8ffd1b",
    "metadata": {},
    "source": [
     "# Aggregation\n",
@@ -1173,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "e7298816",
+   "id": "1ae6b60b",
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "b36adbc5",
+   "id": "bd59009f",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "17476c7f",
+   "id": "4d730339",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "13353ac0",
+   "id": "4cf8c643",
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "e86d206e",
+   "id": "4af6c4ae",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "32a91bbd",
+   "id": "7b58b50d",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "a5638262",
+   "id": "f55f7034",
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0ea1d3f",
+   "id": "073ff7a2",
    "metadata": {},
    "source": [
     "Same right? We have to use `sum()` for Python datatypes and `np.sum()` for numpy datatypes. Let's see the difference."
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "7ea26ef8",
+   "id": "08e5192a",
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "3c7900d3",
+   "id": "b1256558",
    "metadata": {},
    "outputs": [
     {
@@ -1371,8 +1371,139 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 126,
+   "id": "c7904f05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1. , 2. , 3.3],\n",
+       "       [4. , 5. , 6.6]])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "9dada3d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.6"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "41d2a58b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.65"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "267d1f17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "5d61a832",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8490988796347985"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Standart deviation = a measure of how spread out a group of member is from the mean\n",
+    "np.std(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "6fc1e4d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.419166666666667"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Variance = measure of the average degree to which each number is different to the main.\n",
+    "# High variance = wider range of numbers\n",
+    "# Lower varience = lower range of numbers\n",
+    "np.var(a2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d334a8ac",
+   "id": "ec653d41",
    "metadata": {},
    "outputs": [],
    "source": []
